tools/tests/errors/surf_lib_03.ki
# A trailing comma in a JSON object is rejected (expects another key).
var j = import("json")
discard j.loads("{\"a\": 1,}")
